Se creo diferentes div, como para hacer una pagina web identica con propiedades necesarias tanto en css como html, cuando hay diferentes resoluciones de pantalla.

--- a/tp1/index.html
+++ b/tp1/index.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<h1>Bienvenidos a Mi Blog!</h1>
+
+<div class="containerM">
+<div class="container">
+    <img src="images.png" alt="Oro600">
+    <h4>Como crear tu primera aplicacion web: paso a paso</h4>
+    <p>Bernal David | 2/04/25</p>
+    <h6>Me gusta: 932</h6>
+
+</div>
+
+<div class="container">
+    <img src="images.png" alt="Oro600">
+    <h4>Entendiendo los fundamentos de la programacion orientada a objetos</h4>
+    <p>Bernal David | 2/04/25</p>
+    <h6>Me gusta: 745</h6>
+
+</div>
+
+<div class="container">
+    <img src="images.png" alt="ORO600">
+    <h4>Mejores practicas para escribir codigo facil de entender</h4>
+    <p>Bernal David | 2/04/25</p>
+    <h6>Me gusta: 625</h6>
+
+</div>
+
+<div class="container">
+    <img src="images.png" alt="Oro600">
+    <h4>Como mejorar tus habilidades de desarrollo de software: consjeos y trucos</h4>
+    <p>Bernal David | 2/04/25</p>
+    <h6>Me gusta: 566</h6>
+</div>
+
+<div class="container">
+    <img src="images.png" alt="oro600">
+    <h4>Herramientas de recursos esenciales para un desarrollador de software</h4>
+    <p>Bernal David | 2/04/25</p>
+    <h6>Me gusta: 578</h6>
+
+</div>
+
+</div>
 </body>
 </html>
